samples/_failures_safe/1761477759_f49b6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69891760.c: In function ‘main’:
./samples/SAFE/__tmp_69891760.c:153:5: error: expected declaration or statement at end of input
  153 |     }
      |     ^
